--- a/dev.html
+++ b/dev.html
@@ -10,12 +10,12 @@
     />
     <style>
       :root {
-        --spotify-green: #1db954;
-        --spotify-black: #191414;
-        --spotify-dark-gray: #282828;
-        --spotify-light-gray: #535353;
-        --spotify-white: #ffffff;
-        --spotify-accent: #1ed760;
+        --main: #231e2d;
+        --secondary: #73b5f0;
+        --third: #64e5e9;
+        --white: #ffffff;
+        --light-gray: #a8a8a8;
+        --dark-gray: #2d2837;
       }
 
       * {
@@ -27,8 +27,8 @@
 
       body {
         font-family: "Inter", sans-serif;
-        background-color: var(--spotify-black);
-        color: var(--spotify-white);
+        background-color: var(--main);
+        color: var(--white);
         line-height: 1.6;
       }
 
@@ -41,8 +41,8 @@
         text-align: center;
         background: linear-gradient(
           135deg,
-          var(--spotify-black) 0%,
-          var(--spotify-dark-gray) 100%
+          var(--main) 0%,
+          var(--dark-gray) 100%
         );
         padding: 0 20px;
       }
@@ -65,14 +65,14 @@
 
       .hero h1 {
         font-size: 3.5rem;
-        margin-bottom: 10px;
-        color: var(--spotify-green);
+        margin-bottom: 20px;
+        color: var(--third);
       }
 
       .hero-subtitle {
         font-size: 1.5rem;
-        color: var(--spotify-light-gray);
-        margin-bottom: 30px;
+        color: var(--light-gray);
+        margin-bottom: 40px;
       }
 
       .cta-buttons {
@@ -84,8 +84,8 @@
       .btn {
         display: inline-block;
         padding: 12px 24px;
-        background-color: var(--spotify-green);
-        color: var(--spotify-black);
+        background-color: var(--third);
+        color: var(--main);
         text-decoration: none;
         border-radius: 50px;
         transition:
@@ -95,7 +95,7 @@
 
       .btn:hover {
         transform: scale(1.05);
-        background-color: var(--spotify-accent);
+        background-color: var(--secondary);
       }
 
       .tech-stack {
@@ -103,11 +103,12 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 15px;
-        margin-top: 30px;
+        margin: 40px 0;
+        padding: 20px 0;
       }
 
       .tech-tag {
-        background-color: var(--spotify-dark-gray);
+        background-color: var(--dark-gray);
         color: var(--spotify-white);
         padding: 8px 15px;
         border-radius: 20px;
@@ -121,8 +122,8 @@
       }
 
       .projects {
-        padding: 100px 20px;
-        background-color: var(--spotify-dark-gray);
+        padding: 120px 40px;
+        background-color: var(--dark-gray);
       }
 
       .projects-grid {
@@ -152,25 +153,26 @@
       }
 
       .project-content {
-        padding: 20px;
+        padding: 30px;
       }
 
       .project-card h3 {
-        color: var(--spotify-green);
-        margin-bottom: 10px;
+        color: var(--secondary);
+        margin-bottom: 15px;
+        font-size: 1.4rem;
       }
 
       .contact {
-        background-color: var(--spotify-black);
-        padding: 50px 20px;
+        background-color: var(--main);
+        padding: 80px 20px;
         text-align: center;
       }
 
       .contact-links {
         display: flex;
         justify-content: center;
-        gap: 20px;
-        margin-top: 20px;
+        gap: 30px;
+        margin-top: 40px;
       }
 
       .contact-link {
