--- a/entrepeneur.html
+++ b/entrepeneur.html
@@ -10,12 +10,12 @@
     />
     <style>
       :root {
-        --spotify-green: #1db954;
-        --spotify-black: #191414;
-        --spotify-dark-gray: #282828;
-        --spotify-light-gray: #535353;
-        --spotify-white: #ffffff;
-        --spotify-accent: #1ed760;
+        --main: #231e2d;
+        --secondary: #73b5f0;
+        --third: #64e5e9;
+        --white: #ffffff;
+        --light-gray: #a8a8a8;
+        --dark-gray: #2d2837;
       }
 
       * {
@@ -27,8 +27,8 @@
 
       body {
         font-family: "Inter", sans-serif;
-        background-color: var(--spotify-black);
-        color: var(--spotify-white);
+        background-color: var(--main);
+        color: var(--white);
         line-height: 1.6;
       }
 
@@ -41,8 +41,8 @@
         text-align: center;
         background: linear-gradient(
           135deg,
-          var(--spotify-black) 0%,
-          var(--spotify-dark-gray) 100%
+          var(--main) 0%,
+          var(--dark-gray) 100%
         );
         padding: 0 20px;
       }
@@ -66,12 +66,12 @@
       .hero h1 {
         font-size: 3.5rem;
         margin-bottom: 20px;
-        color: var(--spotify-green);
+        color: var(--secondary);
       }
 
       .hero p {
         font-size: 1.2rem;
-        color: var(--spotify-light-gray);
+        color: var(--light-gray);
         margin-bottom: 30px;
       }
 
@@ -84,8 +84,8 @@
       .btn {
         display: inline-block;
         padding: 12px 24px;
-        background-color: var(--spotify-green);
-        color: var(--spotify-black);
+        background-color: var(--third);
+        color: var(--main);
         text-decoration: none;
         border-radius: 50px;
         transition:
@@ -95,12 +95,12 @@
 
       .btn:hover {
         transform: scale(1.05);
-        background-color: var(--spotify-accent);
+        background-color: var(--secondary);
       }
 
       .ventures {
         padding: 100px 20px;
-        background-color: var(--spotify-dark-gray);
+        background-color: var(--dark-gray);
       }
 
       .ventures-grid {
