--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     />
     <style>
       :root {
-        --spotify-green: #1db954;
-        --spotify-black: #191414;
-        --spotify-dark-gray: #282828;
-        --spotify-light-gray: #535353;
-        --spotify-white: #ffffff;
-        --spotify-accent: #1ed760;
+        --main: #231e2d;
+        --secondary: #73b5f0;
+        --third: #64e5e9;
+        --white: #ffffff;
+        --light-gray: #a8a8a8;
+        --dark-gray: #2d2837;
       }
 
       * {
@@ -27,8 +27,8 @@
 
       body {
         font-family: "Inter", sans-serif;
-        background-color: var(--spotify-black);
-        color: var(--spotify-white);
+        background-color: var(--main);
+        color: var(--white);
         line-height: 1.6;
       }
 
@@ -41,8 +41,8 @@
         text-align: center;
         background: linear-gradient(
           135deg,
-          var(--spotify-black) 0%,
-          var(--spotify-dark-gray) 100%
+          var(--main) 0%,
+          var(--dark-gray) 100%
         );
         padding: 0 20px;
       }
@@ -66,12 +66,12 @@
       .hero h1 {
         font-size: 3.5rem;
         margin-bottom: 10px;
-        color: var(--spotify-green);
+        color: var(--secondary);
       }
 
       .hero-subtitle {
         font-size: 1.5rem;
-        color: var(--spotify-light-gray);
+        color: var(--light-gray);
         margin-bottom: 30px;
       }
 
@@ -85,8 +85,8 @@
 
       .lang-btn {
         background-color: transparent;
-        color: var(--spotify-white);
-        border: 1px solid var(--spotify-light-gray);
+        color: var(--white);
+        border: 1px solid var(--light-gray);
         padding: 5px 10px;
         border-radius: 20px;
         cursor: pointer;
@@ -94,9 +94,9 @@
       }
 
       .lang-btn.active {
-        background-color: var(--spotify-green);
-        color: var(--spotify-black);
-        border-color: var(--spotify-green);
+        background-color: var(--third);
+        color: var(--main);
+        border-color: var(--third);
       }
 
       .skills {
@@ -108,7 +108,7 @@
       }
 
       .skill-tag {
-        background-color: var(--spotify-dark-gray);
+        background-color: var(--dark-gray);
         color: var(--spotify-white);
         padding: 8px 15px;
         border-radius: 20px;
@@ -142,7 +142,7 @@
 
       .btn:hover {
         transform: scale(1.05);
-        background-color: var(--spotify-accent);
+        background-color: var(--third);
       }
 
       .projects {
@@ -350,6 +350,7 @@
           <span class="skill-tag">NodeJS</span>
           <span class="skill-tag">Docker</span>
           <span class="skill-tag">Kubernetes</span>
+          <span class="skill-tag">Rust</span>
         </div>
 
         <div class="cta-buttons">
