feat(logo): add logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
+
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="./logo.png" />
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -23,6 +25,12 @@
       rel="stylesheet"
     />
     <style>
+      .logo {
+        width: 50px; /* Adjust size as needed */
+        height: 50px;
+        margin-bottom: 20px;
+        border-radius: 50%; /* Optional: make it circular */
+      }
       :root {
         --main: #231e2d;
         --secondary: #73b5f0;
