feat: Add new project: Trading Bot Portfolio for Photographer
- Added project card for automated trading bot with Discord integration.
- Included project image and updated project description.
- Added link to live project demo.

--- a/index.html
+++ b/index.html
@@ -432,6 +432,24 @@
           </div>
         </div>
 
+        <div class="project-card">
+          <img
+            src="./DSC01122.jpg"
+            alt="Trading Bot Project"
+            class="project-image"
+          />
+          <div class="project-content">
+            <h3>Portfolio for photographer</h3>
+            <p>Bot de trading automatisé avec intégration Discord</p>
+            <div class="project-tags">
+              <span class="project-tag">Next</span>
+            </div>
+            <a href="https://ssimpleregard-portfolio.vercel.app/" class="btn"
+              >See Project</a
+            >
+          </div>
+        </div>
+
         <!-- MINATA Project -->
         <div class="project-card">
           <img src="./minata.webp" alt="MINATA Project" class="project-image" />
