feat: comment out MINATA project section
- Temporarily disabled the MINATA project card in the portfolio section.
- The related code is preserved within comments for potential future reuse.

--- a/index.html
+++ b/index.html
@@ -450,20 +450,21 @@
           </div>
         </div>
 
-        <!-- MINATA Project -->
-        <div class="project-card">
-          <img src="./minata.webp" alt="MINATA Project" class="project-image" />
-          <div class="project-content">
-            <h3>MINATA</h3>
-            <p>Marketplace de livraison inter-continentale</p>
-            <div class="project-tags">
-              <span class="project-tag">React</span>
-              <span class="project-tag">Golang</span>
-              <span class="project-tag">Co-fondateur</span>
-            </div>
-            <a href="link-to-minata-project.html" class="btn">See Project</a>
-          </div>
-        </div>
+        <!-- <!-- MINATA Project -->
+        -->
+        <!-- <div class="project-card"> -->
+        <!--   <img src="./minata.webp" alt="MINATA Project" class="project-image" /> -->
+        <!--   <div class="project-content"> -->
+        <!--     <h3>MINATA</h3> -->
+        <!--     <p>Marketplace de livraison inter-continentale</p> -->
+        <!--     <div class="project-tags"> -->
+        <!--       <span class="project-tag">React</span> -->
+        <!--       <span class="project-tag">Golang</span> -->
+        <!--       <span class="project-tag">Co-fondateur</span> -->
+        <!--     </div> -->
+        <!--     <a href="link-to-minata-project.html" class="btn">See Project</a> -->
+        <!--   </div> -->
+        <!-- </div> -->
 
         <!-- BABACOIFFURE Project -->
         <div class="project-card">
